<resources>
    <string name="app_name">fyp</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_nameS">User name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="passwordS">Password</string>
    <string name="nameS">Name</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_Button">Sign up</string>
    <string name="order_now">Order now</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="today_s_deal">Today\'s Deal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logut">Log out</string>
    <string name="train_again">Train your profile again</string>
    <string name="training_complete">training complete</string>
    <string name="start_service">Start Service</string>
    <string name="textview">TextView</string>
    <string name="already_have_an_account_login">Already Have An Account?</string>
</resources>
